Fix overflow on window resize

--- a/src/styles.css
+++ b/src/styles.css
@@ -52,7 +52,7 @@ header {
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-  width: 60vw;  
+  min-width: 60vw;  
   padding: 2rem;
   border-radius: 1rem;
   background-color: #b7e4c7;
